frontend/test/should_fail/index_exec_edge_fromIndexSameAsArray_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:array<AEdge>, j:int)
{
	{ i=edgesFromIndexSameAsArray(j, j) }
}